# function-table

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
function_table/: __init__.py
tests/: test_function_table.py
