[metadata]
name = function-table
version = 0.1.1
description = Learn a callable function from a table of inputs and outputs using XGBoost.
long_description = file: README.md
license_file = LICENSE

[options]
packages = find:
install_requires =
    numpy>=1.22
    xgboost>=2.0
python_requires = >=3.8

[options.packages.find]
where = .
exclude = tests*
